Some changes to the xml models, Few tests. Revised pot